[gd_scene load_steps=13 format=3 uid="uid://b8iy1w8skuh2v"]

[ext_resource type="Script" path="res://scripts/combat/combat_character.gd" id="1_2uelq"]
[ext_resource type="Texture2D" uid="uid://dqe1q13m2i0m8" path="res://assets/ui/fight_ui/combat_char_bg_2.png" id="2_j7j7e"]
[ext_resource type="Texture2D" uid="uid://b818jtm4d4and" path="res://assets/enemies/monster_02.png" id="3_1fhkk"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_wtnqe"]
size = Vector2(296, 294)

[sub_resource type="Gradient" id="Gradient_x0e7t"]
colors = PackedColorArray(1, 1, 1, 1, 1, 1, 1, 1)

[sub_resource type="GradientTexture1D" id="GradientTexture1D_yn0b0"]
gradient = SubResource("Gradient_x0e7t")

[sub_resource type="Gradient" id="Gradient_lw2pk"]
colors = PackedColorArray(1, 0, 0, 1, 1, 0, 0, 1)

[sub_resource type="GradientTexture1D" id="GradientTexture1D_voasg"]
gradient = SubResource("Gradient_lw2pk")

[sub_resource type="LabelSettings" id="LabelSettings_naxwo"]
font_size = 28
font_color = Color(0, 0, 0, 1)

[sub_resource type="Gradient" id="Gradient_20mt7"]
offsets = PackedFloat32Array(1)
colors = PackedColorArray(4.90934e-06, 0, 0.891691, 1)

[sub_resource type="GradientTexture1D" id="GradientTexture1D_0ugsf"]
gradient = SubResource("Gradient_20mt7")

[sub_resource type="LabelSettings" id="LabelSettings_co2s8"]
font_size = 28
font_color = Color(0, 0, 0, 1)

[node name="player" type="CharacterBody2D"]
position = Vector2(811, 433)
scale = Vector2(2.5, 2.5)
collision_layer = 0
script = ExtResource("1_2uelq")

[node name="character_portrait_bg" type="Sprite2D" parent="."]
scale = Vector2(0.3, 0.3)
texture = ExtResource("2_j7j7e")

[node name="character_portrait" type="Sprite2D" parent="character_portrait_bg"]
z_index = 1
position = Vector2(7.62939e-05, 3.25441e-05)
scale = Vector2(2.83854, 2.83854)
texture = ExtResource("3_1fhkk")

[node name="collision" type="CollisionShape2D" parent="."]
z_index = -1
position = Vector2(-1, 2)
shape = SubResource("RectangleShape2D_wtnqe")

[node name="health_bar" type="TextureProgressBar" parent="."]
anchors_preset = 10
anchor_right = 1.0
offset_left = -127.0
offset_top = -207.0
offset_right = 129.0
offset_bottom = -167.0
grow_horizontal = 2
step = 0.01
value = 100.0
nine_patch_stretch = true
texture_under = SubResource("GradientTexture1D_yn0b0")
texture_progress = SubResource("GradientTexture1D_voasg")

[node name="curr_health" type="Label" parent="health_bar"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -11.5
offset_right = 20.0
offset_bottom = 11.5
grow_horizontal = 2
grow_vertical = 2
text = "100/100"
label_settings = SubResource("LabelSettings_naxwo")

[node name="shield_bar" type="TextureProgressBar" parent="."]
anchors_preset = 10
anchor_right = 1.0
offset_left = -127.0
offset_top = -248.2
offset_right = 129.0
offset_bottom = -208.2
grow_horizontal = 2
step = 0.01
value = 100.0
nine_patch_stretch = true
texture_progress = SubResource("GradientTexture1D_0ugsf")

[node name="curr_shield" type="Label" parent="shield_bar"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -11.5
offset_right = 20.0
offset_bottom = 11.5
grow_horizontal = 2
grow_vertical = 2
text = "100/100"
label_settings = SubResource("LabelSettings_co2s8")
